Fix toolbar overlap in site editor (#51810)
* expand fixed toolbar to cover document title control

* adds the z-index code back

--- a/packages/edit-site/src/components/layout/style.scss
+++ b/packages/edit-site/src/components/layout/style.scss
@@ -4,6 +4,17 @@
 	color: $white;
 	display: flex;
 	flex-direction: column;
+
+	// Expand the fixed block toolbar to cover the document title control.
+	.block-editor-block-contextual-toolbar {
+		@include break-medium() {
+			&.is-fixed {
+				// the combined with of the tools at the right of the header and the margin left
+				width: calc(100% - 240px - #{$grid-unit-80} - #{$grid-unit-70});
+			}
+		}
+	}
+
 }
 
 .edit-site-layout__hub {
